--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1> Whack A Molley Molley! </h1>
         <h2>Score:</h2>
         <h2 id="score"></h2>
         <h2>Time Left:</h2>
