--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
         <meta charset="utf-8">
         <title>Whack A Mole</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="utf-8"></script>
-        <script src="app.js" charset="utf-8"></script>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1> Whack A Molley Molley! </h1>
-        <h2>Score:</h2>
-        <h2 id="score"></h2>
-        <h2>Time Left:</h2>
-        <h2 id ="timeleft"></h2>
+        <div>
+            <h3>Score:  <span id="score"></span></h3>
+            <h3>Time Left:  <span id ="timeleft"></span></h3>
+        </div>
+        <div>
+            <h2>QUESTION 1:</h2>
+            <h2>What is 5 + 5?</h2>
+
+        </div>
         <div class="grid">
             <div class="square" id="1"></div>
             <div class="square" id="2"></div>
@@ -25,5 +29,6 @@
             <div class="square" id="9"></div>
         </div>
      
+        <script src="app.js" charset="utf-8"></script>
     </body>
 </html>
