--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
     </head>
     <body>
         <h1> Whack A Molley Molley! </h1>
-        <div>
-            <h3>Score:  <span id="score"></span></h3>
-            <h3>Time Left:  <span id ="timeleft"></span></h3>
-        </div>
-        <div>
-            <h2>QUESTION 1:</h2>
-            <h2>What is 5 + 5?</h2>
 
+        <div>
+            <button id="btn-start">Start!</button>
         </div>
+        <div class="top">
+            <div class="top-child">
+                <h3>Score:  <span id="score"></span></h3>
+            </div>
+            <div class="top-child">
+                <h2>QUESTION 1:</h2>
+                <h2>What is 5 + 5?</h2>
+            </div>
+            <div class="top-child">
+                <h3>Time Left:  <span id ="timeleft"></span></h3>
+            </div>
+        </div>
+
+
         <div class="grid">
             <div class="square" id="1"></div>
             <div class="square" id="2"></div>
