moving to final phase

--- a/index.html
+++ b/index.html
@@ -1,45 +1,25 @@
+
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Whack A Mole</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="utf-8"></script>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <br>
-        <h1> Whack A Molley Molley! </h1>
+<html>
+<head>
+<title>WELCOME TO MATHS MANIA!</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-        <div>
-            <h2>QUESTION 1:</h2>
-            <h2>What is 5 + 5?</h2>
-        </div>
+<div>
+  <div class="logo"></div>
+  <div>
+    <h1>WELCOME TO MATHS MANIA!</h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p>35 days left</p>
+  </div>
+  <div>
+    Powered by 
+  </div>
+</div>
 
-
-        <div class="top">
-            <div class="top-child">
-                <h3>Score:  <span id="score"></span></h3>
-            </div>
-            <div class="top-child">
-                <button id="btn-start">Start!</button>
-            </div>
-            <div class="top-child">
-                <h3>Time Left:  <span id ="timeleft"></span></h3>
-            </div>
-        </div>
-
-        <div class="grid">
-            <div class="square" id="1"></div>
-            <div class="square" id="2"></div>
-            <div class="square" id="3"></div>
-            <div class="square" id="4"></div>
-            <div class="square" id="5"></div>
-            <div class="square" id="6"></div>
-            <div class="square" id="7"></div>
-            <div class="square" id="8"></div>
-            <div class="square" id="9"></div>
-        </div>
-     
-        <script src="app.js" charset="utf-8"></script>
-    </body>
+</body>
 </html>
