--- a/game1.html
+++ b/game1.html
@@ -28,9 +28,8 @@
             </div>
             <div class="top-child">
                 <button id="btn-start">Start!</button>
-            </div>
-            <div id="myDIV">
-                <button> Next </button>
+                <button id="btn-next"> Next </button>
+                <button id="btn-restart"> Restart </button>
             </div>
             <div class="top-child">
                 <h3>Time Left:  <span id ="timeleft"></span></h3>
