--- a/game2.html
+++ b/game2.html
@@ -15,24 +15,26 @@
 
     <body>
         <br>
-        <h1> QUESTION 1: </h1>
+        <h1> QUESTION 2: </h1>
 
         <div>
-            <h2> What is 5 + 5?</h2>
+            <h2> What is 8 - 3 ?</h2>
         </div>
 
 
         <div class="top">
             <div class="top-child">
-                <h3>Score:  <span id="score"></span></h3>
+                
+                <h3>Score:<br>10 points! <!-- <span id="score"></span> --></h3>
+                
             </div>
             <div class="top-child">
                 <button id="btn-start">Start!</button>
-                <a href="game2.html"><button id="btn-next"> Next </button></a>
+                <button id="btn-next"> Next </button>
                 <button id="btn-restart"> Restart </button>
             </div>
             <div class="top-child">
-                <h3>Time Left: <span id ="timeleft"></span></h3>
+                <h3>Time Left:  <span id ="timeleft"></span></h3>
             </div>
         </div>
 
