--- a/game3.html
+++ b/game3.html
@@ -15,10 +15,10 @@
 
     <body>
         <br>
-        <h1> QUESTION 1: </h1>
+        <h1> QUESTION 3: </h1>
 
         <div>
-            <h2> What is 5 + 5?</h2>
+            <h2> What is 4 + 2 ?</h2>
         </div>
 
 
@@ -28,11 +28,11 @@
             </div>
             <div class="top-child">
                 <button id="btn-start">Start!</button>
-                <a href="game2.html"><button id="btn-next"> Next </button></a>
+                <button id="btn-next"> Next </button>
                 <button id="btn-restart"> Restart </button>
             </div>
             <div class="top-child">
-                <h3>Time Left: <span id ="timeleft"></span></h3>
+                <h3>Time Left:  <span id ="timeleft"></span></h3>
             </div>
         </div>
 
