--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body >
 
 <div>
   <div class="logo"></div>
-  <div>
+  <div class="main">
     <h1>WELCOME TO MATHS MANIA!</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p>35 days left</p>
+    <div class="lets-play-btn">
+      <a href="game1.html"><button id="letsPlay">Let's Play!</button></a>
+    </div>
+
+    <div>
+      <p>Objectives</p>
+      <p>This game trains children not only mental sum, but also the hand coordination
+        and quick thinking.
+      </p>
+    </div>
+    
   </div>
   <div>
     Powered by 
