made the qns and ans not static

--- a/game1.html
+++ b/game1.html
@@ -15,10 +15,10 @@
 
     <body>
         <br>
-        <h1> QUESTION 1: </h1>
+        <h1>QUESTION:</h1>
 
         <div>
-            <h2> What is 5 + 5?</h2>
+            <h1> What is <span id="input1"></span> + <span id="input2"></span>?</h1>
         </div>
 
 
@@ -28,7 +28,7 @@
             </div>
             <div class="top-child">
                 <button id="btn-start">Start!</button>
-                <a href="game2.html"><button id="btn-next"> Next </button></a>
+                <button id="btn-next"> Next </button>
                 <button id="btn-restart"> Restart </button>
             </div>
             <div class="top-child">
