--- a/game2.html
+++ b/game2.html
@@ -17,8 +17,8 @@
         <br>
         <h1> QUESTION 2: </h1>
 
-        <div>
-            <h2> What is 8 - 3 ?</h2>
+        <div id="question">
+            <h2> What is:  </h2>
         </div>
 
 
@@ -26,7 +26,7 @@
             <div class="top-child">
                 
                 <h3>Score:<br>10 points! <!-- <span id="score"></span> --></h3>
-                
+
             </div>
             <div class="top-child">
                 <button id="btn-start">Start!</button>
