--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div>
       <p>Objectives</p>
-      <p>This game trains children not only mental sum, but also the hand coordination
+      <p>The game aims to test children's basic math skills, hand eye coordination, 
         and quick thinking.
       </p>
     </div>
