--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div>
   <div class="logo"></div>
   <div class="main">
-    <h1>WELCOME TO MATHS MANIA!</h1>
+    <h1 class="title">WELCOME TO MATHS MANIA!</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <div class="lets-play-btn">
       <a href="game1.html"><button id="letsPlay">Let's Play!</button></a>
