--- a/game1.html
+++ b/game1.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Whack A Mole</title>
+        <title>Math Mania</title>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="utf-8"></script>
         <link rel="stylesheet" href="style.css">
         <p hidden>
