clean up and lfe is good without bugs

--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
   <div class="main">
     <h1 class="title">WELCOME TO MATHS MANIA!</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <br>
+    <br>
     <div class="lets-play-btn">
       <a href="game1.html"><button id="letsPlay">Let's Play!</button></a>
     </div>
 
     <div>
-      <p>Objectives</p>
+      <p><strong>Objectives</strong></p>
       <p>The game aims to test children's basic math skills, hand eye coordination, 
         and quick thinking.
+      </p>
+    </div>
+    <div>
+      <p><strong>How to Play</strong></p>
+      <p>Find the answer to the question by clicking on the right number! Can you get all the numbers
+        before the timer runs out?
       </p>
     </div>
     
