--- a/game3.html
+++ b/game3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
@@ -51,4 +51,4 @@
         <script src="app.js" charset="utf-8"></script>
     </body>
 
-</html>
+</html> -->
